# woodwire

./: .gitignore  .htmlhintrc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .repomixignore  CONTRIBUTING.md  LICENSE.md  QUICK_START.md  README.md  SECURITY.md  docs-requirements.txt  mkdocs.yml  repomix.config.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: accept-adrs.yml  ci.yml  create-planned-issues.yml  dependabot-auto-merge.yml  deploy-aws.yml  deploy-pages.yml  deploy-worker.yml  validate-dependabot.yml
bot/: README.md  __init__.py  ai_backend.py  main.py  pyproject.toml  requirements.txt  voice.py
bot/tests/: __init__.py  test_ai_backend.py  test_main.py  test_voice.py
docs-src/: CONTRIBUTING.md  DEVELOPMENT_PHILOSOPHY.md  feature-request-automation.md  index.md
infra/: README.md  woodwire-chat-bucket.yaml  woodwire-chat-queue.yaml  woodwire-iam.yaml
meta/: DEVELOPMENT_PHILOSOPHY.md  ROBOT_ETHICS.md
meta/adr/: ADR-001-use_adrs.md  ADR-002-sqs_long_polling_over_websockets.md  ADR-003-direct_s3_presigned_uploads.md  ADR-004-sqs_visibility_timeout_before_deletion.md  ADR-005-edge_polling_mitigation.md  ADR-006-monorepo_structure.md  ADR-007-use_uv_for_bot_python_dependencies.md  TEMPLATE.md
meta/plans/: Home AI Gateway.md  README.md  Woodwire refinement.md
scripts/: build-docs.sh  local-ci-check.sh
src/: README.md  index.html  manifest.json  sw.js
worker/: README.md  index.js  index.test.js  package-lock.json  package.json  wrangler.toml
(+33 files in other folders)
